--- a/gb/20/3/25/n11971847.md
+++ b/gb/20/3/25/n11971847.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qtfwow338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【拍案惊奇】大陆政医媒携手保零 台美军演防共</h2>
-<a href="https://d29mno3lcgt6u3.cloudfront.net/G9iHdQQMf"><img width="600" src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d3malt9gyhsmb.cloudfront.net/Q0xHdQQMc"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>大陆再传排查兵源，美台军演防共军空袭。（新唐人合成）
 </h6>
 <hr>
-	<p>【大纪元2020年03月25日讯】大家好，欢迎收看《<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》，我是大宇。</p>
+	<p>【大纪元2020年03月25日讯】大家好，欢迎收看《<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》，我是大宇。</p>
 <h3>【五天无新增？湖北已解封 武汉四月解封】</h3>
 <p>3月24日，湖北省疫情防控指挥部发出通告，经过中央批准，从3月25日零点开始，除了武汉以外的湖北地区，全部解除管控，湖北省解除了“封省”的状态，人们可以凭借手机软件上的“健康码”有序流动。而武汉呢，将在4月8日零点开始，解除封城的状态。</p>
 <p>那不用智能手机的老人，装不了“健康码”怎么办呢？3月22日，黑龙江五大连池，一个老人家就因此跟门卫之间，发生冲突。</p>
 <p>大陆卫健委发言人米锋3月23日说，湖北省已经连续5天没有新增病例，包括确诊和疑似，都没有。他指的区间是3月18日零点开始，一直到3月22日的午夜24点，这5天时间。这成了湖北省解封的最大依据之一。</p>
-<p><center><a src=""></a><a href="https://d29mno3lcgt6u3.cloudfront.net/G9iHdQQMf"><img width="600" src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Hn0Us4WvTg4" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<p><center><a src=""></a><a href="https://d3malt9gyhsmb.cloudfront.net/Q0xHdQQMc"><img width="600" src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Hn0Us4WvTg4" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
 <h2>【湖北记者揭医院拒收情况严重 为保证“零增长”】</h2>
 <p>不过，就像大家知道的，就在那5天湖北没有新增病例的时候，当地一名主流媒体记者发了一篇影响很大的文章，标题是《我最难忘的一天》，这篇文章在大陆的网上都传得很广，不少都被删除。</p>
 <p>这篇文章的作者，讲述了自己在3月19日从凌晨到晚上，经历的一家人入院救治的过程，揭示了当局宣传的“零增长”背后的情形。</p>
@@ -35,7 +35,7 @@
 <h3>【李克强呼吁不要瞒报 但谁保下级官吏乌纱帽】</h3>
 <p>在3月23日的防疫会议上，中共总理李克强要求，“各地实事求是、公开透明发布疫情的信息”，“及时、真实、准确”，还提到什么呢，“发现一例报告一例”、“不能为追求零报告而瞒报漏报”。</p>
 <p>李克强说的这段话，与大陆的《宪法》一样的完美、精致，但是大陆官方从来不缺漂亮话，关键在于“做到”两个字。大家可以观察，如果接下来，各地政府、官媒还没有如实报导瘟疫真相，包括无症状感染者。那么不是李克强说话不好使，政令不出中南海，那可能就是他自己，带头说了大话，又开了张空头支票。</p>
-<p>如果大家能在大陆官媒上，看到我们《<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》之前报导的很多各地疫情真相，或者接下来，我们揭示出的疫情新出现的真实案例，那才是真的“做到”了。但我个人并不抱太大希望，为什么？因为真实报导，那复工复产受到延阻，该是谁的责任！想如实报导的官媒领导、各级官吏，得先摸摸自己头上的乌纱帽。</p>
+<p>如果大家能在大陆官媒上，看到我们《<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E9%97%BB%E6%8B%8D%E6%A1%88%E6%83%8A%E5%A5%87.md#1">新闻拍案惊奇</a>》之前报导的很多各地疫情真相，或者接下来，我们揭示出的疫情新出现的真实案例，那才是真的“做到”了。但我个人并不抱太大希望，为什么？因为真实报导，那复工复产受到延阻，该是谁的责任！想如实报导的官媒领导、各级官吏，得先摸摸自己头上的乌纱帽。</p>
 <p>比如在2月份，广西南宁市卫健委主任蓝智，还没有公开在媒体上讲，就因为私自向亲戚透露实情，就被扣上“传谣”的帽子，给弄下台。这都是杀鸡儆猴的榜样。</p>
 <h2>【政策模棱两可 地方如走钢丝 当局“一场豪赌”】</h2>
 <p>李克强和大陆卫健委还说什么呢？说瘟疫爆发零星病例和局部爆发瘟疫的风险还在！零增长不等于零风险。</p>
@@ -94,8 +94,8 @@
 <p>我跟大家说，中共收买外国人做宣传，这是早已有之的事。而且，如果你宣传病毒是P4泄漏，文章绝不会在微信留下1秒钟，但这类有关美国的，被大肆转发。这种论调，已经把大陆两个专家的脸打肿了，一个是P4的石正丽，三番五次重申，病毒来自蝙蝠；另一个是上海的医师张文宏，他明确表示现有所有证据指向，病毒源自武汉。现在美国，跳出来三个谁都不认识的网民，说美国有人是零号病人。不是有那句话吗，谣言一句话，辟谣腿跑折。中共就是要搞乱局面，它混水摸鱼。</p>
 <p>我们看国内微信指控美国泄漏病毒的文章，看似有理有据，其实全都找不到根据。这里至少有三篇文章，原链接根本没有。我们知道，美国的媒体，是非常罕见会删除文章的，如果有错，最多时发个更正声明，很少说文章会删除。</p>
 <p>还有啊，俄罗斯的卫星通讯社，3月23日报导，说俄罗斯科学家发现，这种病毒可能来自“外太空”，你没听错，是“外太空”，是随着流星进入地球的。真不知道，俄罗斯这是要拉架，还是添乱。</p>
-<h2>【陕西又现<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%B1%89%E5%9D%A6%E7%97%85%E6%AF%92.md#1">汉坦病毒</a> 致死率极高！】</h2>
-<p>目前，被很多人称为“<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>”的疫情没过，又有另外的病毒出现。大陆媒体报导，陕西安康市宁陕县3月23日晚发出通告，称当天凌晨4点，一辆从云南往山东的客运巴士，途经当地，有一名姓田的务工人员感到不适，随后送到医院，但是还是很快早上7点钟离世。但是却不是感染现在的瘟疫，而是死于另一种病毒，叫做“<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E6%B1%89%E5%9D%A6%E7%97%85%E6%AF%92.md#1">汉坦病毒</a>”，是一种出血热。这种病毒的主要症状是，剧烈头痛、背痛、腹痛、发冷、恶心等等，后期还可能出现急性肾衰竭，死亡率介于1%以下，或者1%到15%不等。至于病毒的传染途径，我查来查去，可能香港卫生署卫生防护中心的网站，介绍得比较清楚，就是主要由老鼠等啮齿类动物传播，如果人被老鼠咬，或者吃过、碰过被老鼠体液污染过的东西后，就可能被感染，还可能由老鼠体液形成的气溶胶传染。最重要的，会不会人传人呢？介绍用了四个字“极其罕见”，没有否定。而且这个病毒潜伏期也很长，最长可以是8个星期，而且一旦感染，目前没有特别疗法，只能是极早发现，极早治疗。</p>
+<h2>【陕西又现<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%89%E5%9D%A6%E7%97%85%E6%AF%92.md#1">汉坦病毒</a> 致死率极高！】</h2>
+<p>目前，被很多人称为“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>”的疫情没过，又有另外的病毒出现。大陆媒体报导，陕西安康市宁陕县3月23日晚发出通告，称当天凌晨4点，一辆从云南往山东的客运巴士，途经当地，有一名姓田的务工人员感到不适，随后送到医院，但是还是很快早上7点钟离世。但是却不是感染现在的瘟疫，而是死于另一种病毒，叫做“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%89%E5%9D%A6%E7%97%85%E6%AF%92.md#1">汉坦病毒</a>”，是一种出血热。这种病毒的主要症状是，剧烈头痛、背痛、腹痛、发冷、恶心等等，后期还可能出现急性肾衰竭，死亡率介于1%以下，或者1%到15%不等。至于病毒的传染途径，我查来查去，可能香港卫生署卫生防护中心的网站，介绍得比较清楚，就是主要由老鼠等啮齿类动物传播，如果人被老鼠咬，或者吃过、碰过被老鼠体液污染过的东西后，就可能被感染，还可能由老鼠体液形成的气溶胶传染。最重要的，会不会人传人呢？介绍用了四个字“极其罕见”，没有否定。而且这个病毒潜伏期也很长，最长可以是8个星期，而且一旦感染，目前没有特别疗法，只能是极早发现，极早治疗。</p>
 <p>节目最后，纠正一下上周五节目里的一个错误。在当天节目的17分25秒的地方，提到武汉一位老人戴着手环，当时说是武汉感染过的人，被要求戴上的，后来经过多位香港朋友的指证，确定这是香港的照片，是香港卫生署给还处于强制隔离期间的人佩戴的手环，而且比照照片中巴士座椅的样子，应该也是香港的巴士。在这里跟大家道歉，会再对得到消息进行谨慎查证或处理，每天经手的信息比较多，但是会在谨慎。也谢谢提供反馈的所有朋友！</p>
 <p>好，如果您有爆料信息，可以给我们发邮件，我们的节目电邮是：xwpajq@gmail.com。有推特的朋友，也可以在推特上关注我，我的推特账号是@xwpajq。</p>
 <p>最后，欢迎您订阅和分享我们的频道，在订阅的时候，不要忘了点击订阅按钮旁的小铃铛图案，在第一时间收到我们新节目上传的通知。也欢迎您加入我们的会员。这期节目就到这里，感谢您的收看，下期再会！</p>
@@ -106,35 +106,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/14/n11939240.md#1">【拍案惊奇】美军带毒到武汉？中共假话遭批</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】中共病毒被曝恐有夺命亚型</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/18/n11948516.md#1">【拍案惊奇】华人回国避疫？美国防疫别小看</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/18/n11951281.md#1">【拍案惊奇】中国七个雷区 随时踩爆更大疫情</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/14/n11939240.md#1">【拍案惊奇】美军带毒到武汉？中共假话遭批</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945922.md#1">【拍案惊奇】中共病毒被曝恐有夺命亚型</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11948516.md#1">【拍案惊奇】华人回国避疫？美国防疫别小看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11951281.md#1">【拍案惊奇】中国七个雷区 随时踩爆更大疫情</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10158455.md#1" target="_blank">林辉：为何“六九届”学生少有成功人士？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/25/n11971847.htm">【拍案惊奇】大陆政医媒携手保零 台美军演防共</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/25/n11971847.htm">【拍案惊奇】大陆政医媒携手保零 台美军演防共</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qtfwow338/djy/blob/master/gb/20/3/25/n11971847.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/3/25/n11971847.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
